# convnext_tts

./: .gitignore  LICENSE  README.md  pyproject.toml
exp/jsut/: test.sh
exp/jsut/00_prepare/: run_dummy.sh
exp/jsut/01_preprocess/: run.sh
exp/jsut/02_default/01_train/: run.sh  test.sh
exp/jsut/02_default/02_syn/: run.sh
exp/jsut/03_vocos/01_train/: run.sh  test.sh
exp/jsut/03_vocos/02_syn/: run.sh
recipes/jsut/: run.sh
src/convnext_tts/: __init__.py
src/convnext_tts/datasets/: normal.py
src/convnext_tts/frontend/: ja.py
src/convnext_tts/layers/: alignment.py  convnext.py  embedding.py
src/convnext_tts/lit_modules/: normal.py
src/convnext_tts/losses/: forwardsum.py  gan.py  masked.py
src/convnext_tts/models/: convnext_tts.py  discriminator.py
src/convnext_tts/modules/: convnext.py  variance_adaptor.py  vocoder.py  wavenext.py
src/convnext_tts/transforms/: mel.py
src/convnext_tts/utils/: dataset.py  logging.py  model.py  tqdm.py  typing.py
